--- v3.3 (2018-xx-xx) ---
* Update package protobuf: make also binary executable for host system.
* Update in all (supported) configs:
  - PROTOBUF_VER from 3.5.1 to 3.6.1
  - OPENSCENEGRAPH_VER from 3.6.1 to 3.6.2

--- v3.2 (2018-07-07) ---
* Add new native packages: cmake, pkg-config.
* Add new packages: libusb, pciutils, sysfsutils, udev, usbutils.
* Add new packages: hunspell, icu, minizip, qtkeychain, qtwebkit.
* Add `make all` target: build all available packages.
* Add `make download` target: download sources without build of packages.
* Add support of AstraLinux 1.5 [amd64] (static and shared).
* Stop support of AstraLinux 1.2 [amd64] (static and shared).
* Make `make clean` and `make distclean` targets interactive: user should
  explicitly confirm massive file deletion.
* Update package cmake-settings: add CMAKE_SYSTEM_PREFIX_PATH variable with
  path to Qt5 root directory to cmake toolchain file.
* Improve GetSources() function: show error message if size of downloaded
  tarball is equal to zero. (Only checksum mismatch was shown earlier.)
* Use special BuildGlibc() function instead of BuildPkg() as a workaround to
  rare and unpredictable build error: ".../shlib.lds:135: syntax error".
* Use CheckPkgVersion() function for improving of debug messages.
* Drop "-LTS" suffix from name of Ubuntu configs.
* Update patch for osgearth package: fix build with OSG 3.6.1 and newer.
* Update in all static configs:
  - OPENSSL_VER from 1.0.2n to 1.0.2o
  - SQLITE_VER from 3.21.0 to 3.23.2
* Update in all configs:
  - PROJ_VER from 5.0.0 to 5.1.0
  - OPENSCENEGRAPH_VER from 3.4.1 to 3.6.1
  - FFMPEG_VER from 3.4.2 to 4.0.1
  - LIBSIGNAL_PROTOCOL_C_VER from 2.3.1 to 2.3.2

--- v3.1 (2018-03-21) ---
* Delete package: vlc.
* Add new package: libsignal-protocol-c.
* Add possibility to build manually selected list of static libraries in
  environments with shared libraries. See STATIC_PKG_LIST in settings.sh.